--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
-/*
-*,
-*::after,
-*::before{
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900");
 
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.7;
+    color: #fff;
+    background-color: #1f2029;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 #wrapper{
@@ -13,20 +23,407 @@
     height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
-    background-color: #ffffff;
-    /* color: aliceblue; 
 }
+
+
 
 .container{
 
+    max-width: calc(100% - 40px);
     width: 860px;
+    height: 100%;
     margin: 0 auto;
-    display: flex;
-    margin-top: 3rem;
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 120px 0px;
+
+}
+
+[type="radio"]:checked,
+[type="radio"]:not(:checked){
+
+    position: absolute;
+    visibility: hidden;
+}
+
+.color-btn + label
+{
+    position: relative;
+    width: 40px;
+    height: 40px;
+    background-color: aqua;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-right: 10px;
+    background-position: center;
+    background-size: cover;
+    border: 3px solid transparent;
+    overflow: hidden;
+    box-shadow: 0 12px 35px 0 rgba(16, 39, 112, 0.25);
+    transition: all 200ms linear;
+    z-index: 10;
+}
+.color-btn:checked + label {
+    border-color: #434343;
+    transform: scale(1.1);
+}
+.btn-color-1{
+    margin-left: 500px;
+    background-image: url(./images/color1.jpg);
+}
+.btn-color-2{
+
+    background-image: url(./images/color2.jpg);
+}
+.btn-color-3{
+
+    background-image: url(./images/color3.jpg);
+}
+.btn-color-4{
+
+    background-image: url(./images/color4.jpg);
+}
+.btn-color-5{
+
+    background-image: url(./images/color5.jpg);
+}
+.btn-color-6{
+
+    background-image: url(./images/color6.jpg);
+}
+
+.img-wrap{
+
+    position: absolute;
+    width: 500px;
+    height: 410px;
+    /* top: 100px; */
+    left: 0;
+    display: inline-block;
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-image: url(./images/chair1.png);
+    opacity: 0;
+}
+
+.for-color-1:checked~.img-wrap.chair-1 {
+    opacity: 1;
+    animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+.img-wrap.chair-2 {
+    background-image: url(./images/chair2.png);
+}
+.for-color-2:checked ~ .img-wrap.chair-2 {
+    opacity: 1;
+    animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+.img-wrap.chair-3 {
+    background-image: url("./images/chair3.png");
+}
+.for-color-3:checked ~ .img-wrap.chair-3 {
+    opacity: 1;
+    animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+.img-wrap.chair-4 {
+    background-image: url("./images/chair4.png");
+}
+.for-color-4:checked ~ .img-wrap.chair-4 {
+    opacity: 1;
+    animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+.img-wrap.chair-5 {
+    background-image: url("./images/chair5.png");
+}
+.for-color-5:checked ~ .img-wrap.chair-5 {
+    opacity: 1;
+    animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+.img-wrap.chair-6 {
+    background-image: url("./images/chair6.png");   
+}
+.for-color-6:checked ~ .img-wrap.chair-6 {
+    opacity: 1;
+    animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+@keyframes shake {
+    10%,
+    90% {
+        transform: translate3d(-1px, 0, 0) rotate(-1deg);
+    }
+    20%,
+    80% {
+        transform: translate3d(2px, 0, 0) rotate(2deg);
+    }
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-3px, 0, 0) rotate(-3deg);
+    }
+    40%,
+    60% {
+        transform: translate3d(3px, 0, 0) rotate(3deg);
+    }
+}
+
+.back-color{
+
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    z-index: -1;
+    display: block;
+    transition: all 250ms linear;
+    transition-delay: 300ms;
+}
+
+.back-color.chair-1 {
+    background-image: linear-gradient(196deg, #4c4c4c, #262626);
+    opacity: 0;
+  }
+.for-color-1:checked ~ .back-color.chair-1 {
+    background-image: linear-gradient(196deg, #f1a9a9, #e66767);
+    opacity: 1;
+  }
+
+.back-color.chair-2 {
+    background-image: linear-gradient(196deg, #4c4c4c, #262626);
+    opacity: 0;
+  }
+.for-color-2:checked ~ .back-color.chair-2 {
+    opacity: 1;
+  }
+  .back-color.chair-3 {
+    background-image: linear-gradient(196deg, #8a9fb2, #5f7991);
+    opacity: 0;
+  }
+  .for-color-3:checked ~ .back-color.chair-3 {
+    opacity: 1;
+  }
+  .back-color.chair-4 {
+    background-image: linear-gradient(196deg, #97afc3, #6789a7);
+    opacity: 0;
+  }
+  .for-color-4:checked ~ .back-color.chair-4 {
+    opacity: 1;
+  }
+  .back-color.chair-5 {
+    background-image: linear-gradient(196deg, #afa6a0, #8c7f76);
+    opacity: 0;
+  }
+  .for-color-5:checked ~ .back-color.chair-5 {
+    opacity: 1;
+  }
+  .back-color.chair-6 {
+    background-image: linear-gradient(196deg, #aaadac, #838786);
+    opacity: 0;
+  }
+  .for-color-6:checked ~ .back-color.chair-6 {
+    opacity: 1;
+  }
+
+  .intro_wrap{
+
+    position: relative;
+    margin-left: 500px;
+    z-index: 10;
+    display: block;
+    text-align: left;
+    /* height: fit-content; */
+    /* max-height: 500px; */
+
+  }
+
+  .section-heading{
+
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 13px;
+    line-height: 1.2;
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+
+  .section-subheading{
+
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    font-size: 34px;
+    line-height: 1.2;
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 10px;  
+  }
+
+  .amount{
+
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 1.2;
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+
+  .amount span{
+
+    text-decoration: line-through;
+    font-size: 20px;
+    opacity: 0.6;
+    padding-left: 15px;
+    
+  }
+
+  .section-desc{
+
+    margin-right: 25px;
+  }
+
+  .choice-color{
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 1.2;
+    color: #fff;
+  }
+
+.desc-btn:checked + label,
+.desc-btn:not(:checked) + label {
+    position: relative;
+    transition: all 200ms linear;
+    display: inline-block;
+    cursor: pointer;
+    color: #fff;
+    opacity: 0.5;
+    font-weight: bold;
+    font-size: larger;
+    margin-bottom: 1rem;
+}
+
+.desc-btn:checked + label {
+    opacity: 1;
+}
+.desc-btn:not(:checked) + label:hover {
+    opacity: 0.8;
+}
+
+.desc-sec{
+
+    padding-top: 10px;
+    padding-bottom: 30px;
+    transition: all 250ms linear;
+    opacity: 0;
+    overflow: hidden;
+    pointer-events: none;
+    transform: translateY(20px);
+}
+.details{
+
+    position: absolute;
+    bottom: 60px;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+}
+
+.choice1:checked ~ .desc-sec.description {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0);
+  }
+
+  .choice2:checked ~ .desc-sec.details {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0);
+  }
+
+
+.section-inline {
+    position: relative;
+    display: inline-block;
+    margin-right: 20px;
+}
+.section-inline p span {
+    font-size: 30px;
+    line-height: 1.1;
+}
+ 
+.info-wrap{
+
+    position: relative;
+    margin-left: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 210px;
+    height: 50px;
+    border-radius: 5px;
+    overflow: hidden;
+    cursor: pointer;
+    background-color: #944852;
+    box-shadow: 0px 0px 6px 0px rgba(255, 255, 255, 0.189);
+    transition: all 200ms linear;
     
 }
-*/
-.icon {
-  font-size: 16px; /* Adjust as needed */
+
+a{
+    text-decoration: none;
+    color: #fff;
+    z-index: 1;
+    /* margin-top: 40%; */
+}
+.for-color-1:checked~.info-wrap{
+
+    background-color: rgba(112, 53, 53, 0.588);
+}
+.for-color-2:checked~.info-wrap{
+
+    background-color: #1a1a1a;
+}
+.for-color-3:checked~.info-wrap{
+
+    background-color: #40566e;
+}
+.for-color-4:checked~.info-wrap{
+
+    background-color: #5e89b2;
+}
+.for-color-5:checked~.info-wrap{
+
+    background-color: #8c7f76;
+}
+.for-color-6:checked~.info-wrap{
+
+    background-color: #5d6160;
+}
+
+.info-wrap::before{
+
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 5px;
+    background-color: #333;
+    /* opacity: 0; */
+    transform-origin: left;
+    transform: scaleX(0);
+    transition: all 200ms linear;
+}
+.info-wrap:hover{
+    box-shadow: 0 12px 35px 0 rgba(16, 38, 112, 0.151);
+}
+
+.info-wrap:hover::before{
+
+    transform: scaleX(1);
 }
